# chat-bot

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
controllers/: chat_controller.py  ingest_controller.py
db/: redis_client.py  vector.py
graph/: builder.py
graph/nodes/: generate_answer.py  load_memory.py  retrieve_context.py  store_memory.py  summarize.py
ingest/: policies.py
jupyter/1.ingest/: 1.ingest.ipynb
jupyter/1.ingest/.ipynb_checkpoints/: 1.ingest-checkpoint.ipynb
jupyter/1.ingest/chroma_db/: chroma.sqlite3
schemas/: ingest_schema.py  router_schema.py
services/: chat_service.py
utils/: embedding_adapter.py  llm_adapter.py
